# sebastian

./: .gitignore  CHANGELOG.md  Cargo.toml  FINDINGS.md  PORTING_NOTES.md  README.md  TODO.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: HARNESS.md  NUANCES.md
examples/: css_check.rs
scripts/: regen-refs.sh  setup-harness.sh
seb/: Cargo.toml  LICENSE
seb/src/: help.rs  main.rs
seb/tests/: help.rs
sebastian/: Cargo.toml
sebastian-wasm/: Cargo.toml  README.md
sebastian-wasm/demo/: index.html
sebastian-wasm/src/: lib.rs
sebastian/examples/: css_check.rs  to_png.rs
sebastian/fonts/: Excalifont-OFL.txt
sebastian/src/: diagram.rs  graphlib.rs  lib.rs  mathx.rs  svg.rs  text.rs
sebastian/src/architecture/: mod.rs
sebastian/src/block/: mod.rs
sebastian/src/c4/: mod.rs
sebastian/src/classdiag/: mod.rs
sebastian/src/dagre/: coordinate_system.rs  mod.rs  order.rs  position.rs  rank.rs  types.rs  util.rs
sebastian/src/er/: mod.rs
sebastian/src/flowchart/: db.rs  lexer.rs  mod.rs  parser.rs
sebastian/src/gantt/: mod.rs
sebastian/src/gitgraph/: mod.rs
sebastian/src/journey/: mod.rs
sebastian/src/kanban/: mod.rs
sebastian/src/mindmap/: mod.rs
sebastian/src/packet/: mod.rs
sebastian/src/pie/: mod.rs
sebastian/src/pyramid/: mod.rs
sebastian/src/quadrant/: mod.rs
sebastian/src/radar/: mod.rs
sebastian/src/render/: bbox.rs  clusters.rs  config.rs  css.rs  dagre_render.rs  data.rs  default_theme.css  edges.rs  elk.rs  handdrawn.rs  khroma.rs  markers.rs  mod.rs  raster.rs  shapes.rs  styles.rs  themes.rs
sebastian/src/requirement/: mod.rs
sebastian/src/sankey/: mod.rs
sebastian/src/sequence/: mod.rs  render.rs
sebastian/src/state/: mod.rs
sebastian/src/system_chart/: mod.rs
sebastian/src/timeline/: mod.rs
sebastian/src/treemap/: mod.rs
sebastian/src/xychart/: mod.rs
sebastian/tests/: approximate_smoke.rs  bbox_unit.rs  block_corpus.rs  book_corpus.rs  class_corpus.rs  config_unit.rs  dagre_acyclic_unit.rs  dagre_border_segments_unit.rs  dagre_coordinate_system_unit.rs  dagre_differential.rs  dagre_normalize_unit.rs  dagre_order_unit.rs  dagre_rank_position_unit.rs  dagre_rank_util_unit.rs  dagre_structure_unit.rs  dagre_types_unit.rs  dagre_util_graph_unit.rs  dagre_util_unit.rs  elk_layout.rs  er_corpus.rs  flowchart_handdrawn.rs  flowchart_nohtml_rendering.rs  flowchart_parse_unit.rs  flowchart_rendering.rs  gantt_corpus.rs  gitgraph_corpus.rs  graphlib_unit.rs  hostile_input.rs  journey_corpus.rs  kanban_corpus.rs  khroma_unit.rs  lexer_regression.rs  packet_corpus.rs  pie_corpus.rs  pyramid_smoke.rs  quadrant_corpus.rs  radar_corpus.rs  render_geometry_unit.rs  sankey_corpus.rs  sequence_corpus.rs  (+10 more)
sebastian/tests/block_cases/: basic.mmd  cols.mmd  ecross.mmd  edge1.mmd  edge2.mmd  ehoriz.mmd  ethick.mmd  nestedid.mmd  shapes.mmd  space.mmd  styled.mmd  width.mmd
sebastian/tests/book_cases/: book000.mmd  book003.mmd  book004.mmd  book005.mmd  book007.mmd  book010.mmd  book012.mmd  book014.mmd  book015.mmd  book016.mmd  book017.mmd  book023.mmd  book025.mmd  book026.mmd  book027.mmd  book029.mmd  book030.mmd  book031.mmd  book033.mmd  book034.mmd  book035.mmd  book036.mmd  book038.mmd  book040.mmd  book044.mmd  book051.mmd  book052.mmd  book053.mmd  book054.mmd  book055.mmd  book058.mmd  book060.mmd  book061.mmd  book065.mmd  book067.mmd  book073.mmd  book074.mmd  book075.mmd  book078.mmd  book079.mmd  (+230 more)
sebastian/tests/class_cases/: cls000.mmd  cls001.mmd  cls005.mmd  cls006.mmd  cls007.mmd  cls008.mmd
sebastian/tests/er_cases/: er001.mmd
sebastian/tests/fixtures/: bt_direction.json  chain.json  cycle.json  diamond_labels.json  disconnected.json  random_42.json  random_99.json  random_clusters_5.json  random_clusters_77.json  self_loop.json
sebastian/tests/flowchart_cases/: bt.mmd  edges.mmd  invisible.mmd  longlabels.mmd  nested.mmd  parallel.mmd  rl.mmd  styled.mmd  unicode.mmd
sebastian/tests/gantt_cases/: gantt001.mmd  gantt002.mmd  gantt003.mmd  gantt004.mmd
sebastian/tests/gitgraph_cases/: git000.mmd  git001.mmd  git_bt.mmd  git_bt2.mmd  git_btl.mmd  git_tb.mmd  git_tb2.mmd  git_tbl.mmd  git_tbt.mmd  gitgraph002.mmd
sebastian/tests/journey_cases/: journey001.mmd  journey002.mmd
sebastian/tests/kanban_cases/: kan.mmd  kan2.mmd  kan3.mmd
sebastian/tests/known_divergences/: README.md  er_relationship_curve.mmd  gitgraph_merge_viewbox.mmd
sebastian/tests/lexer_cases/: tokens.golden
sebastian/tests/packet_cases/: packet000.mmd  packet001.mmd  packet002.mmd
sebastian/tests/pie_cases/: pie001.mmd  pie002.mmd  pie003.mmd
sebastian/tests/quadrant_cases/: quadrant000.mmd  quadrant001.mmd  quadrant002.mmd
sebastian/tests/radar_cases/: radar000.mmd  radar001.mmd  radar002.mmd
sebastian/tests/sankey_cases/: sankey000.mmd  sankey001.mmd  sankey002.mmd
sebastian/tests/sequence_cases/: seq000.mmd  seq001.mmd  seq003.mmd  seq004.mmd  seq005.mmd  seq008.mmd  seq009.mmd  seq011.mmd  seq014.mmd  seq019.mmd  seq020.mmd  seq022.mmd  seq023.mmd  seq024.mmd  seq025.mmd  seq026.mmd  seq027.mmd  seq028.mmd  seq029.mmd  seq030.mmd  seq031.mmd  seq032.mmd  seq033.mmd  seq035.mmd  seq036.mmd
sebastian/tests/state_cases/: state000.mmd  state002.mmd  state003.mmd  state006.mmd  state007.mmd  state008.mmd  state009.mmd  state010.mmd  state012.mmd  state013.mmd  state014.mmd  state018.mmd  state022.mmd  state101.mmd  state102.mmd  state103.mmd  state104.mmd  state105.mmd
sebastian/tests/timeline_cases/: tl000.mmd
sebastian/tests/treemap_cases/: t1.mmd  t2.mmd  t3.mmd  t4.mmd
sebastian/tests/xychart_cases/: xy001.mmd  xy002.mmd
src/: jsmap.rs  main.rs  svg.rs  text.rs
src/dagre/: acyclic.rs  add_border_segments.rs  nesting_graph.rs  normalize.rs  order.rs  parent_dummy_chains.rs
src/flowchart/: lexer.rs
src/render/: clusters.rs  data.rs  graph.rs  markers.rs  styles.rs  svg_label.rs  themes.rs
src/sequence/: database_icon.rs  render.rs
tests/: book_corpus.rs  class_corpus.rs  dagre_differential.rs  flowchart_rendering.rs  sequence_corpus.rs  state_corpus.rs  timeline_corpus.rs
(+317 files in other folders)
