[workspace]
resolver = "2"
members = ["sebastian", "seb", "sebastian-wasm"]

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
repository = "https://github.com/aovestdipaperino/sebastian"
license = "MIT"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
# This project is a byte-exact port of mermaid.js: numeric casts and exact
# float comparisons deliberately replicate JS semantics, and function
# structure/naming mirrors the upstream source to stay diffable against it.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
float_cmp = "allow"
many_single_char_names = "allow"
similar_names = "allow"
items_after_statements = "allow"
too_many_lines = "allow"
# Panics signal a bug in the port, not a recoverable caller error.
missing_panics_doc = "allow"
