[package]
name = "seb"
description = "CLI for sebastian — render mermaid diagrams to SVG, mmdc-style"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "seb"
path = "src/main.rs"

[dependencies]
sebastian = { path = "../sebastian", version = "0.2.0" }
logo-art = "0.2.1"

[lints]
workspace = true
