[package]
name = "seb"
description = "CLI for sebastian — render mermaid diagrams to SVG, mmdc-style"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "seb"
path = "src/main.rs"

[dependencies]
sebastian = { path = "../sebastian", version = "0.5.0" }
logo-art = "0.2.1"

[lints]
workspace = true

# `cargo binstall seb` — archives are produced by .github/workflows/release.yml
# with the bare binary at the archive root.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/seb-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/seb-{ target }.zip"
pkg-fmt = "zip"
