[package]
name = "sebastian"
description = "Pixel-perfect Rust port of the mermaid.js diagram renderers"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
# Keep the published tarball lean: byte-exact test corpora and the logo
# are not needed by downstream consumers (fonts/ and default_theme.css are).
exclude = ["tests/**", "resources/**"]

[dependencies]
core-math = "1.1.1"
libc = "0.2"
indexmap = "2"
serde_json = "1.0.150"
ttf-parser = "0.25.1"
# Optional rasterizer (SVG -> PNG). Pulled in only with the `raster` feature so
# pure-SVG consumers stay lightweight.
resvg = { version = "0.44", optional = true }

[features]
# Adds the `render::raster` module: SVG -> PNG with an embedded font.
raster = ["dep:resvg"]

[dev-dependencies]
serde_json = "1.0.150"

[lints]
workspace = true
