[package]
name = "sebastian"
description = "Pixel-perfect Rust port of the mermaid.js diagram renderers"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
# Keep the published tarball lean: byte-exact test corpora and the logo
# are not needed by downstream consumers (fonts/ and default_theme.css are).
exclude = ["tests/**", "resources/**"]

[dependencies]
indexmap = "2"
serde_json = "1.0.150"
ttf-parser = "0.25.1"
# Optional rasterizer (SVG -> PNG). Pulled in only with the `raster` feature so
# pure-SVG consumers stay lightweight.
resvg = { version = "0.44", optional = true }
# Optional ELK layout backend (`layout: elk` flowcharts). A native-Rust port of
# the Eclipse Layout Kernel; byte-identical to mermaid's elkjs 0.9.x on acyclic
# graphs (see TODO.md). Pulled in only with the `elk` feature so the default
# build stays lean.
elkrs = { version = "0.1.1", optional = true }

# Native-only: core-math's vendored C (correctly-rounded transcendentals,
# matching V8) does not cross-compile to wasm, and libc's localtime_r/mktime
# (gantt local-time date math) has no wasm equivalent. See `src/mathx.rs` and
# the gantt UTC fallback.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
core-math = "1.1.1"
libc = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
libm = "0.2"

[features]
# On by default. `mermaid-extensions` enables sebastian-original diagram types
# that have no mermaid equivalent (currently `pyramid`). Build with
# `--no-default-features` to restrict output to faithful mermaid diagram types.
default = ["mermaid-extensions"]
mermaid-extensions = []
# Adds the `render::raster` module: SVG -> PNG with an embedded font.
raster = ["dep:resvg"]
# Adds the `render::elk` module: ELK layered layout via the `elkrs` crate.
elk = ["dep:elkrs"]

[dev-dependencies]
serde_json = "1.0.150"

[lints]
workspace = true
